src/objects/TR1__Job_Leads__c.object
<CustomObject>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Food Technology</fullName>
                </value>
                <value>
                    <fullName>General Cover</fullName>
                </value>
                <value>
                    <fullName>General Studies</fullName>
                </value>
                <value>
                    <fullName>Geography</fullName>
                </value>
                <value>
                    <fullName>Geology</fullName>
                </value>
                <value>
                    <fullName>Graphic Design</fullName>
                </value>
                <value>
                    <fullName>Health and Social Care</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Humanities</fullName>
                </value>
                <value>
                    <fullName>ICT</fullName>
                </value>
                <value>
                    <fullName>Job Search Tutor</fullName>
                </value>
                <value>
                    <fullName>Law</fullName>
                </value>
                <value>
                    <fullName>Leisure and Tourism</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Maths</fullName>
                </value>
                <value>
                    <fullName>Media Studies</fullName>
                </value>
                <value>
                    <fullName>MFL</fullName>
                </value>
                <value>
                    <fullName>MFL - Danish</fullName>
                </value>
                <value>
                    <fullName>MFL - Dutch</fullName>
                </value>
                <value>
                    <fullName>MFL - French</fullName>
                </value>
                <value>
                    <fullName>MFL - German</fullName>
                </value>
                <value>
                    <fullName>MFL - Gujarati</fullName>
                </value>
                <value>
                    <fullName>MFL - Italian</fullName>
                </value>
                <value>
                    <fullName>MFL-Mandarin</fullName>
                </value>
                <value>
                    <fullName>MFL - Punjabi</fullName>
                </value>
                <value>
                    <fullName>MFL - Russian</fullName>
                </value>
                <value>
                    <fullName>MFL - Spanish</fullName>
                </value>
                <value>
                    <fullName>MFL - Turkish</fullName>
                </value>
                <value>
                    <fullName>MFL - Urdu</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Job Leads</relationshipLabel>
        <relationshipName>Job_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Competor__c</fullName>
        <label>Firms Engaged</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Capita</fullName>
                </value>
                <value>
                    <fullName>Celsian</fullName>
                </value>
                <value>
                    <fullName>Connex Education</fullName>
                </value>
                <value>
                    <fullName>Engage</fullName>
                </value>
                <value>
                    <fullName>Hays</fullName>
                </value>
                <value>
                    <fullName>Head Search</fullName>
                </value>
                <value>
                    <fullName>ITN Mark Education</fullName>
                </value>
                <value>
                    <fullName>Just Teachers</fullName>
                </value>
                <value>
                    <fullName>LEA</fullName>
                </value>
                <value>
                    <fullName>Monarch</fullName>
                </value>
                <value>
                    <fullName>PK Education</fullName>
                </value>
                <value>
                    <fullName>Protocol</fullName>
                </value>
                <value>
                    <fullName>Ranstad</fullName>
                </value>
                <value>
                    <fullName>Reed</fullName>
                </value>
                <value>
                    <fullName>Simply Education</fullName>
                </value>
                <value>
                    <fullName>Teacher Active</fullName>
                </value>
                <value>
                    <fullName>Teaching Personnel</fullName>
                </value>
                <value>
                    <fullName>Timeplan</fullName>
                </value>
                <value>
                    <fullName>Tradewind</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TR1__Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Job Leads</relationshipLabel>
        <relationshipName>Job_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Converted_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converted Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Job Leads</relationshipLabel>
        <relationshipName>Job_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Description__c</fullName>
        <label>Job Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <label>Job</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Sales Call</fullName>
                </value>
                <value>
                    <fullName>Monster</fullName>
                </value>
                <value>
                    <fullName>Indeed</fullName>
                </value>
                <value>
                    <fullName>Reed</fullName>
                </value>
                <value>
                    <fullName>School Website</fullName>
                </value>
                <value>
                    <fullName>facebook</fullName>
                </value>
                <value>
                    <fullName>Linkedin</fullName>
                </value>
                <value>
                    <fullName>TES</fullName>
                </value>
                <value>
                    <fullName>Eteach</fullName>
                </value>
                <value>
                    <fullName>Local Authority Job Board</fullName>
                </value>
                <value>
                    <fullName>Search Engine</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Marketing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Job Leads (Referred By)</relationshipLabel>
        <relationshipName>Job_Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Needs Analysis</fullName>
                </value>
                <value>
                    <fullName>Value Proposition</fullName>
                </value>
                <value>
                    <fullName>Pricing Quote</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Permanent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_Key_Stage__c</fullName>
        <label>Year/Key Stage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nursery 0-5yrs</fullName>
                </value>
                <value>
                    <fullName>Foundation Stage 3-5yrs</fullName>
                </value>
                <value>
                    <fullName>Y1(KS1)</fullName>
                </value>
                <value>
                    <fullName>Y2(KS1)</fullName>
                </value>
                <value>
                    <fullName>Y3(KS2)</fullName>
                </value>
                <value>
                    <fullName>Y4(KS2)</fullName>
                </value>
                <value>
                    <fullName>Y5(KS2)</fullName>
                </value>
                <value>
                    <fullName>Y6(KS2)</fullName>
                </value>
                <value>
                    <fullName>KS1</fullName>
                </value>
                <value>
                    <fullName>KS2</fullName>
                </value>
                <value>
                    <fullName>Y7(KS3)</fullName>
                </value>
                <value>
                    <fullName>Y8(KS3)</fullName>
                </value>
                <value>
                    <fullName>Y9(KS3)</fullName>
                </value>
                <value>
                    <fullName>Y10(KS4)</fullName>
                </value>
                <value>
                    <fullName>Y11(KS4)</fullName>
                </value>
                <value>
                    <fullName>KS3/4</fullName>
                </value>
                <value>
                    <fullName>KS3-5</fullName>
                </value>
                <value>
                    <fullName>Y12(KS5)</fullName>
                </value>
                <value>
                    <fullName>Y13(KS5)</fullName>
                </value>
                <value>
                    <fullName>Post-16</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job Lead</label>
    <listViews>
        <fullName>Brighton_Secondary_SEND_Vacancies</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6</booleanFilter>
        <columns>NAME</columns>
        <columns>TR1__Account__c</columns>
        <columns>TR1__Contact__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>oli</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>ablac</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>gmull</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Mmen</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Aogl</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Jhau</value>
        </filters>
        <label>Brighton Secondary &amp; SEND Vacancies</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>NAME</columns>
        <columns>TR1__Status__c</columns>
        <columns>TR1__Job__c</columns>
        <columns>TR1__Account__c</columns>
        <columns>TR1__Contact__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>TR1__Converted_Job__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>cardiff_lt_vacancies</fullName>
        <columns>NAME</columns>
        <columns>TR1__Account__c</columns>
        <columns>TR1__Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>charmian,darren,jade</value>
        </filters>
        <label>cardiff lt vacancies</label>
        <language>en_US</language>
        <sharedTo>
            <group>Cardiff_branch</group>
            <group>Watford_branch</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>JL-{MM}{DD}{YYYY}-{00}</displayFormat>
        <label>Job Leads Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>